[package]
name = "dijkstra_visual"
version = "0.1.0"
edition = "2021"
license = "MIT"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hdrhistogram = "7.5.4"
sdl2 = { version = "0.36.0", features = ["ttf"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
